# sshx

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.js  vite.config.ts
.github/workflows/: tauri-ci.yml
examples/: jumpserver.sshconfig
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  diagnostic.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: connection.rs  diagnostic.rs  mod.rs  settings.rs  sftp.rs  ssh.rs
src-tauri/src/db/: connection.rs  group.rs  migration.rs  mod.rs
src-tauri/src/ssh/: auth.rs  config.rs  keyboard_interactive.rs  manager.rs  mod.rs  path_secure.rs  prompt.rs  session.rs
src-tauri/src/ssh/session/: mod.rs  openssh.rs  russh_session.rs
src-tauri/tests/: russh_vendor_patch.rs
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/components/ui/: dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  textarea.tsx
src/hooks/: useSSH.ts  useTerminal.ts
src/lib/: settingsEvents.ts  terminalConfig.test.ts  terminalConfig.ts
src/pages/: Connections.tsx  Dashboard.tsx  Diagnostics.tsx  Settings.tsx  TerminalPage.tsx
src/store/: index.ts
