[package]
name = "sshx"
version = "0.1.0"
description = "Cross-platform SSH Connection Manager"
authors = ["sshx"]
edition = "2021"

[lib]
name = "sshx_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
thiserror = "2"
async-trait = "0.1"
ssh-key = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
