[package]
name = "sshx"
version = "0.1.0"
description = "Cross-platform SSH Connection Manager"
authors = ["sshx"]
edition = "2021"

[lib]
name = "sshx_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
log = { version = "0.4", features = ["std"] }
thiserror = "2"
async-trait = "0.1"
ssh-key = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
portable-pty = "0.8"

[target.'cfg(not(target_os = "macos"))'.dependencies]
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

# 非 macOS 上使用 vendored russh 0.46 补丁（macOS 走系统 OpenSSH，不依赖 russh）。
[patch.crates-io]
russh = { path = "../vendor/russh" }
